Fix contrast theme

--- a/assets/sass/themes/contrast.scss
+++ b/assets/sass/themes/contrast.scss
@@ -9,6 +9,10 @@
     background: $white;
   }
 
+  .site-header a {
+    color: $black;
+  }
+
   .site-navigation {
     border-top: 1px solid $ghost-black;
   }
